--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         
         <script src="" async defer></script>
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
-        <p>test</p>
+        <form>
+            <input type="search" placeholder="search here">
+        </form>
     
 
     </body>
